Closed
Bug 959792
Opened 12 years ago
Closed 12 years ago
On the nav bar edit, can't drag selection monocles for bad domains
Categories
(Firefox for Metro Graveyard :: Browser, defect, P2)
Tracking
(firefox28 verified, firefox29 verified)
VERIFIED
FIXED
Firefox 29
People
(Reporter: jimm, Assigned: jimm)
References
Details
(Whiteboard: [beta28] [defect] p=3)
Attachments
(1 file)
|
1.42 KB,
patch
|
mbrubeck
:
review+
|
Details | Diff | Splinter Review |
Strange bug, str:
1) navigate to www.google.com
2) tab the urlbar edit
3) drag the selection monocles
result: works
4) navigate to www.gone.bz (bad domain)
5) tap the edit
6) drag the selection monocles
result: monocles can be dragged, disapear sometimes
Updated•12 years ago
|
Blocks: metrov1backlog
Whiteboard: [triage] → [triage] [defect] p=0
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → jmathies
Whiteboard: [triage] [defect] p=0 → [beta28] [defect] p=3
| Assignee | ||
Comment 1•12 years ago
|
||
Interesting bug to track down. Started up in the selection code but ultimately made my way down here after noticing the MozMouseHittest message we get in input.js wasn't getting sent for about pages.
mChromeHitTestCacheForTouch = (apzIntersect && HitTestChrome(pt));
If apzIntersect is false, mChromeHitTestCacheForTouch is false, which isn't right.
Attachment #8360491 -
Flags: review?(mbrubeck)
Updated•12 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P2
QA Contact: jbecerra
| Assignee | ||
Comment 2•12 years ago
|
||
I wonder if we should rename mChromeHitTestCacheForTouch to something along the line of "mNonApzTargetForTouch". Since ApzHitTest may return false for content that doesn't support scrolling or zooming.
Comment 3•12 years ago
|
||
Comment on attachment 8360491 [details] [diff] [review]
fix v.1
Review of attachment 8360491 [details] [diff] [review]:
-----------------------------------------------------------------
Argh, I thought I fixed this at one point but it must have been in a patch that I discarded or backed out. :(
::: widget/windows/winrt/MetroInput.cpp
@@ -1192,5 @@
> if (mCancelable && event->message == NS_TOUCH_START) {
> nsRefPtr<Touch> touch = event->touches[0];
> LayoutDeviceIntPoint pt = LayoutDeviceIntPoint::FromUntyped(touch->mRefPoint);
> - bool apzIntersect = mWidget->ApzHitTest(mozilla::ScreenIntPoint(pt.x, pt.y));
> - mChromeHitTestCacheForTouch = (apzIntersect && HitTestChrome(pt));
If you want to preserve the original structure, you could just correct this to:
mChromeHitTestCacheForTouch = (!apzIntersect || HitTestChrome(pt));
Whichever version you find clearer is fine.
Attachment #8360491 -
Flags: review?(mbrubeck) → review+
| Assignee | ||
Comment 4•12 years ago
|
||
(In reply to Matt Brubeck (:mbrubeck) from comment #3)
> Comment on attachment 8360491 [details] [diff] [review]
> fix v.1
>
> Review of attachment 8360491 [details] [diff] [review]:
> -----------------------------------------------------------------
>
> Argh, I thought I fixed this at one point but it must have been in a patch
> that I discarded or backed out. :(
>
> ::: widget/windows/winrt/MetroInput.cpp
> @@ -1192,5 @@
> > if (mCancelable && event->message == NS_TOUCH_START) {
> > nsRefPtr<Touch> touch = event->touches[0];
> > LayoutDeviceIntPoint pt = LayoutDeviceIntPoint::FromUntyped(touch->mRefPoint);
> > - bool apzIntersect = mWidget->ApzHitTest(mozilla::ScreenIntPoint(pt.x, pt.y));
> > - mChromeHitTestCacheForTouch = (apzIntersect && HitTestChrome(pt));
>
> If you want to preserve the original structure, you could just correct this
> to:
>
> mChromeHitTestCacheForTouch = (!apzIntersect || HitTestChrome(pt));
>
> Whichever version you find clearer is fine.
wfm! I'm going to update the variable name as well.
| Assignee | ||
Comment 5•12 years ago
|
||
This is also going to need merging with nick's patches on inbound. I'm going to let those merge to mc and land this tomorrow.
| Assignee | ||
Comment 6•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 29
Comment 8•12 years ago
|
||
Landed the original attachment on Aurora, since the patch that landed on m-c depends on m-c-only changes:
https://hg.mozilla.org/releases/mozilla-aurora/rev/4308bd949a96
status-firefox28:
--- → fixed
status-firefox29:
--- → fixed
Comment 9•12 years ago
|
||
Verified as fixed for iteration #22, with both latest Nightly and Aurora on Surface pro 2 with Windows 8.1 64-bit.
You need to log in
before you can comment on or make changes to this bug.
Description
•