Bug 959792 - Accomidate content that doesn't support apz scroll or zoom in widget hit testing. Fixes an issue with selection in the navbar while viewing about pages. r=mbrubeck